[package]
name = "finderyapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew = "^0.19"
wasm-bindgen = "0.2"
cursor = "2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]